--- a/public/index.html
+++ b/public/index.html
@@ -19,12 +19,14 @@
 
  
     <title>John's Portfolio</title>
-    <link rel="icon" href="%PUBLIC_URL%/icons/icon.png" type="image/png">
+    <link rel="icon" href="/icons/j2.png" type="image/png">
 
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
     />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
+
     <script src="https://code.iconify.design/1/1.0.4/iconify.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/2.0.2/anime.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/canvasjs/1.7.0/canvasjs.min.js"></script>
